Add StatefulPage, rename TracesViewModel to TracesRepository

--- a/src/Aspire.Dashboard/Components/Pages/Metrics.razor
+++ b/src/Aspire.Dashboard/Components/Pages/Metrics.razor
@@ -8,6 +8,8 @@
 @inject IStringLocalizer<Dashboard.Resources.Metrics> Loc
 @inject IStringLocalizer<ControlsStrings> ControlsStringsLoc
 
+@implements StatefulPage<>
+
 <PageTitle>@string.Format(Loc[Dashboard.Resources.Metrics.MetricsPageTitle], ResourceService.ApplicationName)</PageTitle>
 
 <div class="metrics-layout">
