--- a/src/Aspire.Dashboard/Components/Pages/Traces.razor
+++ b/src/Aspire.Dashboard/Components/Pages/Traces.razor
@@ -38,7 +38,7 @@
             <ChildContent>
                 <PropertyColumn Title="@StructuredLogsLoc[Dashboard.Resources.StructuredLogs.StructuredLogsTimestampColumnHeader]" Property="@(context => OtlpHelpers.FormatTimeStamp(context.FirstSpan.StartTime))" />
                 <TemplateColumn Title="@ControlsStringsLoc[ControlsStrings.NameColumnHeader]" Tooltip="true" TooltipText="@((t) => $"{t.FullName}: {OtlpHelpers.ToShortenedId(t.TraceId)}")">
-                    <span><FluentHighlighter HighlightedText="@(ViewModel.FilterText)" Text="@(context.FullName)" /></span>
+                    <span><FluentHighlighter HighlightedText="@(TracesRepository.FilterText)" Text="@(context.FullName)" /></span>
                     <span class="trace-id">@OtlpHelpers.ToShortenedId(context.TraceId)</span>
                 </TemplateColumn>
                 <TemplateColumn Title="@Loc[Dashboard.Resources.Traces.TracesSpansColumnHeader]">
@@ -68,7 +68,7 @@
                     <div class="duration-container">
                         <FluentProgressRing Class="duration-ring"
                                             Min="0"
-                                            Max="@Convert.ToInt32(ViewModel.MaxDuration.TotalMilliseconds)"
+                                            Max="@Convert.ToInt32(TracesRepository.MaxDuration.TotalMilliseconds)"
                                             Value="@Convert.ToInt32(context.Duration.TotalMilliseconds)"
                                             aria-label="@TraceDetailLoc[Dashboard.Resources.TraceDetail.TraceDetailDurationHeader]" />
                         <span class="trace-duration">
