--- a/src/Aspire.Dashboard/Components/Pages/Metrics.razor
+++ b/src/Aspire.Dashboard/Components/Pages/Metrics.razor
@@ -8,8 +8,6 @@
 @inject IStringLocalizer<Dashboard.Resources.Metrics> Loc
 @inject IStringLocalizer<ControlsStrings> ControlsStringsLoc
 
-@implements StatefulPage<>
-
 <PageTitle>@string.Format(Loc[Dashboard.Resources.Metrics.MetricsPageTitle], ResourceService.ApplicationName)</PageTitle>
 
 <div class="metrics-layout">
@@ -18,15 +16,15 @@
         <FluentSelect TOption="SelectViewModel<string>"
                       Items="@_applications"
                       OptionText="@(c => c.Name)"
-                      @bind-SelectedOption="_selectedApplication"
-                      @bind-SelectedOption:after="HandleSelectedApplicationChangedAsync"
+                      @bind-SelectedOption="ViewModel.SelectedApplication"
+                      @bind-SelectedOption:after="HandleSelectedApplicationChanged"
                       AriaLabel="@ControlsStringsLoc[ControlsStrings.SelectAnApplication]"/>
         <FluentIcon slot="end" Icon="Icons.Regular.Size20.Clock" Style="margin-right:5px;" />
         <FluentSelect slot="end" TOption="SelectViewModel<TimeSpan>"
                       Items="@_durations"
                       OptionText="@(c => c.Name)"
-                      @bind-SelectedOption="_selectedDuration"
-                      @bind-SelectedOption:after="HandleSelectedDurationChangedAsync"
+                      @bind-SelectedOption="ViewModel.SelectedDuration"
+                      @bind-SelectedOption:after="HandleSelectedDurationChanged"
                       AriaLabel="@Loc[Dashboard.Resources.Metrics.MetricsSelectADuration]"/>
     </FluentToolbar>
     <div class="page-content-area">
@@ -34,14 +32,14 @@
         {
             <FluentSplitter Style="height:100%" Panel1Size="2fr" Panel2Size="8fr">
                 <Panel1>
-                    <FluentTreeView Class="metrics-tree" @bind-CurrentSelected="_selectedTreeItem" @bind-CurrentSelected:after="HandleSelectedTreeItemChanged">
+                    <FluentTreeView Class="metrics-tree" @bind-CurrentSelected="ViewModel.SelectedTreeItem" @bind-CurrentSelected:after="HandleSelectedTreeItemChanged">
                         <ChildContent>
                             @foreach (var meterGroup in _instruments.GroupBy(i => i.Parent).OrderBy(g => g.Key.MeterName))
                             {
-                                <FluentTreeItem @key="meterGroup.Key" Text="@meterGroup.Key.MeterName" Data="@meterGroup.Key" title="@meterGroup.Key.MeterName" InitiallyExpanded="true" InitiallySelected="@(_selectedInstrument == null && meterGroup.Key.MeterName == _selectedMeter?.MeterName)">
+                                <FluentTreeItem @key="meterGroup.Key" Text="@meterGroup.Key.MeterName" Data="@meterGroup.Key" title="@meterGroup.Key.MeterName" InitiallyExpanded="true" InitiallySelected="@(ViewModel.SelectedInstrument == null && meterGroup.Key.MeterName == ViewModel.SelectedMeter?.MeterName)">
                                     @foreach (var instrument in meterGroup.OrderBy(i => i.Name))
                                     {
-                                        <FluentTreeItem @key="instrument" Class="nested" Text="@instrument.Name" Data="@instrument" title="@instrument.Name" InitiallySelected="@(instrument.Name == _selectedInstrument?.Name && instrument.Parent.MeterName == _selectedMeter?.MeterName)" />
+                                        <FluentTreeItem @key="instrument" Class="nested" Text="@instrument.Name" Data="@instrument" title="@instrument.Name" InitiallySelected="@(instrument.Name == ViewModel.SelectedInstrument?.Name && instrument.Parent.MeterName == ViewModel.SelectedMeter?.MeterName)" />
                                     }
                                 </FluentTreeItem>
                             }
@@ -50,19 +48,19 @@
                 </Panel1>
                 <Panel2>
                     <div class="metrics-content">
-                        @if (_selectedApplication.Id != null && _selectedMeter != null && _selectedInstrument != null)
+                        @if (ViewModel.SelectedApplication.Id != null && ViewModel.SelectedMeter != null && ViewModel.SelectedInstrument != null)
                         {
-                            <ChartContainer ApplicationId="@(_selectedApplication.Id)" MeterName="@(_selectedMeter.MeterName)" InstrumentName="@(_selectedInstrument.Name)" Duration="_selectedDuration.Id" />
+                            <ChartContainer ApplicationId="@(ViewModel.SelectedApplication.Id)" MeterName="@(ViewModel.SelectedMeter.MeterName)" InstrumentName="@(ViewModel.SelectedInstrument.Name)" Duration="ViewModel.SelectedDuration.Id" />
                         }
-                        else if (_selectedMeter != null)
+                        else if (ViewModel.SelectedMeter != null)
                         {
-                            <h3>@_selectedMeter.MeterName</h3>
+                            <h3>@ViewModel.SelectedMeter.MeterName</h3>
                             <table style="max-width:1100px;">
-                                @foreach (var item in _instruments.Where(i => i.Parent == _selectedMeter).OrderBy(i => i.Name))
+                                @foreach (var item in _instruments.Where(i => i.Parent == ViewModel.SelectedMeter).OrderBy(i => i.Name))
                                 {
                                     <tr>
                                         <td>
-                                            <FluentAnchor Href="@($"/Metrics/{_selectedApplication.Id}/Meter/{item.Parent.MeterName}/Instrument/{item.Name}")" Appearance="Appearance.Lightweight">@item.Name</FluentAnchor>
+                                            <FluentAnchor Href="@($"/Metrics/{ViewModel.SelectedApplication.Id}/Meter/{item.Parent.MeterName}/Instrument/{item.Name}")" Appearance="Appearance.Lightweight">@item.Name</FluentAnchor>
                                         </td>
                                         <td>@item.Description</td>
                                     </tr>
