--- a/src/Aspire.Dashboard/wwwroot/css/app.css
+++ b/src/Aspire.Dashboard/wwwroot/css/app.css
@@ -197,7 +197,14 @@ fluent-data-grid-cell .long-inner-content {
     margin-right: 3px;
 }
 
-.metric-0
+ .visually-hidden {
+     top: 0;
+     left: -2px;
+     width: 1px;
+     height: 1px;
+     position: absolute;
+     overflow: hidden;
+ }
 
 split-panels::part(handle) {
     display: none;
