--- a/src/Aspire.Dashboard/Components/Controls/MetricTable.razor
+++ b/src/Aspire.Dashboard/Components/Controls/MetricTable.razor
@@ -8,18 +8,19 @@
 <div id="metric-table-container" style="max-height: 60vh; overflow-y: scroll; margin-bottom: 10px;">
     <FluentDataGrid Items="@FilteredMetrics.AsQueryable()" ItemSize="35" ResizableColumns="true" Virtualize="true">
         <ChildContent>
-            <TemplateColumn Class="metric-grid-cell" Title="Start" Sortable="true" Tooltip="true" TooltipText="@(metric => metric.DimensionName)">
+            <TemplateColumn Class="metric-grid-cell" Title="@Loc[nameof(ControlsStrings.MetricTableStartColumnHeader)]" Sortable="true" Tooltip="true" TooltipText="@(metric => metric.DimensionName)">
                 <span aria-live="polite">@context.Value.Start</span>
                 @if (_anyDimensionsShown)
                 {
                     <FluentIcon Icon="Icons.Filled.Size16.DataBarVertical" Color="Color.Info" Style="margin-left: 3px; vertical-align: text-bottom"/>
                 }
             </TemplateColumn>
-            <PropertyColumn Property="@(c => c.Value.End)" Title="End" Sortable="true"/>
+            <PropertyColumn Property="@(c => c.Value.End)" Title="@Loc[nameof(ControlsStrings.MetricTableEndColumnHeader)]" Sortable="true"/>
 
-            @if (InstrumentViewModel.Instrument?.Type == OtlpInstrumentType.Histogram && !InstrumentViewModel.ShowCount)
+            @if (!ShouldShowHistogram())
             {
                 var unit = PlotlyChart.GetDisplayedUnit(InstrumentViewModel, Loc);
+                // these colors line up with P50/P90/P99 colors for the plotly graph
                 var percentileColumns = new List<(int Percentile, string UnderlineColor)> { (50, "#89B5D3"), (90, "#F9B980"), (99, "#8FC98F") };
                 foreach (var (percentile, underlineColor) in percentileColumns)
                 {
@@ -34,9 +35,9 @@
             }
             else
             {
-                <PropertyColumn Property="@(c => c.Value)" Title="Value" />
+                <PropertyColumn Property="@(c => c.Value)" Title="@Loc[nameof(ControlsStrings.MetricTableValueColumnHeader)]" />
             }
-            <TemplateColumn Title="Count" Sortable="true">
+            <TemplateColumn Title="@Loc[nameof(ControlsStrings.MetricTableCountColumnHeader)]" Sortable="true">
                 <span style="margin-right: 2px;">@context.Value.Count</span>
                 <FluentIcon Style="vertical-align: text-bottom" Value="@GetIconForDirection(context.CountDirectionChange)"/>
             </TemplateColumn>
@@ -51,13 +52,13 @@
     <FluentSwitch @bind-Value="@_showLatestMetrics"
                   @bind-Value:after="SettingsChangedAsync"
                   Disabled="@(_metrics.Count < 10)"
-                  UncheckedMessage="Show all values"
-                  CheckedMessage="Show the latest 10 values" />
+                  UncheckedMessage="@Loc[nameof(ControlsStrings.MetricTableShowAllValues)]"
+                  CheckedMessage="@Loc[nameof(ControlsStrings.MetricTableShowLatestValues)]" />
 
     <FluentSwitch @bind-Value="@_onlyShowValueChanges"
                   @bind-Value:after="SettingsChangedAsync"
-                  UncheckedMessage="Don't only show value changes"
-                  CheckedMessage="Only show value changes" />
+                  UncheckedMessage="@Loc[nameof(ControlsStrings.MetricTableShowNonValueChanges)]"
+                  CheckedMessage="@Loc[nameof(ControlsStrings.MetricTableShowOnlyValueChanges)]" />
 </FluentStack>
 
 @code {
