--- a/src/Aspire.Dashboard/Components/ResourcesGridColumns/StateColumnDisplay.razor
+++ b/src/Aspire.Dashboard/Components/ResourcesGridColumns/StateColumnDisplay.razor
@@ -9,7 +9,7 @@
         if (Resource.TryGetExitCode(out int exitCode) && exitCode is not 0)
         {
             <!-- process completed unexpectedly, hence the non-zero code. this is almost certainly an error, so warn users -->
-            <FluentIcon Title="@string.Format(Loc[Columns.StateColumnResourceExitedUnexpectedly], Resource.ResourceType, exitCode)"
+            <FluentIcon Title="@string.Format(Loc[nameof(Columns.StateColumnResourceExitedUnexpectedly)], Resource.ResourceType, exitCode)"
                         Icon="Icons.Filled.Size16.ErrorCircle"
                         Color="Color.Error"
                         Class="severity-icon" />
@@ -17,7 +17,7 @@
         else
         {
             <!-- process completed, which may not have been unexpected -->
-            <FluentIcon Title="@string.Format(Loc[Columns.StateColumnResourceExited], Resource.ResourceType)"
+            <FluentIcon Title="@string.Format(Loc[nameof(Columns.StateColumnResourceExited)], Resource.ResourceType)"
                         Icon="Icons.Filled.Size16.Warning"
                         Color="Color.Warning"
                         Class="severity-icon" />
