Use fluent icon logo instead of img + svg

--- a/src/Aspire.Dashboard/Components/Layout/MainLayout.razor
+++ b/src/Aspire.Dashboard/Components/Layout/MainLayout.razor
@@ -7,7 +7,7 @@
         <FluentAnchor Appearance="Appearance.Stealth" Href="/" Class="logo"
                       title="@Loc[nameof(Layout.MainLayoutAspire)]"
                       aria-label="@Loc[nameof(Layout.MainLayoutAspire)]">
-            <img src="/Logo.svg" />
+            <FluentIcon Value="@(new AspireIcons.Size24.Logo())" />
         </FluentAnchor>
     </div>
 
