--- a/src/Aspire.Dashboard/Components/Controls/NestedDataGrid/ColumnContent/PropertyColumnContent.razor
+++ b/src/Aspire.Dashboard/Components/Controls/NestedDataGrid/ColumnContent/PropertyColumnContent.razor
@@ -1,5 +1,11 @@
-﻿<div style="position: relative; height: 100%; width: 100%; display: flex; align-items: center;">
-    <div>@Content</div>
+﻿@typeparam TGridItem
+@implements IAspireDataGridColumnContent<TGridItem>
+
+<div style="position: relative; height: 100%; width: 100%; display: flex; align-items: center;">
+    @if (RowHasContent is null || RowHasContent.Invoke(Item))
+    {
+        <div>@Content</div>
+    }
 
     @if (OnClick is not null)
     {
@@ -20,4 +26,6 @@
     [Parameter, EditorRequired] public required string Content { get; set; }
     [Parameter] public string? Href { get; set; }
     [Parameter] public Func<MouseEventArgs, Task>? OnClick { get; set; }
+    [Parameter] public Func<TGridItem, bool>? RowHasContent { get; set; }
+    [Parameter, EditorRequired] public required TGridItem Item { get; set; }
 }
